--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,114 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Festan Owner Portal</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-<style>
-    body {
-        color: #fff;
-        background: #ececec;
-    }
-    .form-control {
-        min-height: 41px;
-        background: #fff;
-        box-shadow: none !important;
-        border-color: #e3e3e3;
-    }
-    .form-control:focus {
-        border-color: #70c5c0;
-    }
-    .form-control, .btn {        
-        border-radius: 5px;
-    }
-    .login-form {
-        width: 350px;
-        margin: 0 auto;
-        padding: 100px 0 30px;      
-    }
-    .login-form form {
-        color: #7a7a7a;
-        border-radius: 5px;
-        margin-bottom: 15px;
-        font-size: 13px;
-        background: #fff;
-        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-        padding: 30px;  
-        position: relative; 
-    }
-    .login-form h2 {
-        font-size: 22px;
-        margin: 35px 0 25px;
-    }
-    .login-form .avatar {
-        position: absolute;
-        margin: 0 auto;
-        left: 0;
-        right: 0;
-        top: -50px;
-        width: 95px;
-        height: 95px;
-        border-radius: 50%;
-        z-index: 9;
-        background: #000000;
-        padding: 15px;
-        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-    }
-    .login-form .avatar img {
-        margin-top: 15px;
-        width: 100%;
-    }   
-    .login-form input[type="checkbox"] {
-        margin-top: 2px;
-    }
-    .login-form .btn {        
-        font-size: 16px;
-        font-weight: bold;
-        background: #007bff;
-        border: none;
-        margin-bottom: 20px;
-    }
-    .login-form .btn:hover, .login-form .btn:focus {
-        background: #0d47a1;
-        outline: none !important;
-    }    
-    .login-form a {
-        color: #fff;
-        text-decoration: underline;
-    }
-    .login-form a:hover {
-        text-decoration: none;
-    }
-    .login-form form a {
-        color: #7a7a7a;
-        text-decoration: none;
-    }
-    .login-form form a:hover {
-        text-decoration: underline;
-    }
-</style>
-</head>
-<body>
-<div class="login-form">
-    <form>
-        <div class="avatar text-center">
-            <img src="assets/img/festan5.png" alt="Festan">
+
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Festan Owner Portal</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <style>
+            body {
+                color: #fff;
+                background: #ececec;
+            }
+
+            .form-control {
+                min-height: 41px;
+                background: #fff;
+                box-shadow: none !important;
+                border-color: #e3e3e3;
+            }
+
+            .form-control:focus {
+                border-color: #70c5c0;
+            }
+
+            .form-control,
+            .btn {
+                border-radius: 5px;
+            }
+
+            .login-form {
+                width: 350px;
+                margin: 0 auto;
+                padding: 100px 0 30px;
+            }
+
+            .login-form form {
+                color: #7a7a7a;
+                border-radius: 5px;
+                margin-bottom: 15px;
+                font-size: 13px;
+                background: #fff;
+                box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+                padding: 30px;
+                position: relative;
+            }
+
+            .login-form h2 {
+                font-size: 22px;
+                margin: 35px 0 25px;
+            }
+
+            .login-form .avatar {
+                position: absolute;
+                margin: 0 auto;
+                left: 0;
+                right: 0;
+                top: -50px;
+                width: 95px;
+                height: 95px;
+                border-radius: 50%;
+                z-index: 9;
+                background: #000000;
+                padding: 15px;
+                box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+            }
+
+            .login-form .avatar img {
+                margin-top: 15px;
+                width: 100%;
+            }
+
+            .login-form input[type="checkbox"] {
+                margin-top: 2px;
+            }
+
+            .login-form .btn {
+                font-size: 16px;
+                font-weight: bold;
+                background: #007bff;
+                border: none;
+                margin-bottom: 20px;
+            }
+
+            .login-form .btn:hover,
+            .login-form .btn:focus {
+                background: #0d47a1;
+                outline: none !important;
+                text-decoration: none !important;
+            }
+
+            .login-form a {
+                text-decoration: none !important;
+            }
+
+            .login-form a:hover {
+                text-decoration: none !important;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="login-form">
+            <form>
+                <div class="avatar text-center">
+                    <img src="assets/img/festan5.png" alt="Festan">
+                </div>
+                <h2 class="text-center">Member Login</h2>
+
+                <div class="form-group">
+                    <a href="/login"><button type="button" class="btn btn-primary btn-lg btn-block">Log in</button></a>
+                </div>
+                <div class="form-group">
+                    <a href="/register"><button type="button"
+                            class="btn btn-primary btn-lg btn-block">Register</button></a>
+                </div>
+            </form>
+
         </div>
-        <h2 class="text-center">Member Login</h2>   
-               
-        <div class="form-group">
-            <a href="/login"><button type="button" class="btn btn-primary btn-lg btn-block">Log in</button></a>
-        </div>
-        <div class="form-group">
-            <a href="/register"><button type="button" class="btn btn-primary btn-lg btn-block">Register</button></a>
-        </div>
-    </form>
-   
-</div>
-</body>
+    </body>
+
 </html>
